--- a/redirect.html
+++ b/redirect.html
@@ -5,11 +5,11 @@
   <title>love you</title>
   <link href="redirect.css" rel="stylesheet">
 </head>
-<body>
+<body background="CHELSEA.jpg">
   <div class="bg_heart">
   </div>
   <div class="circle">
-    <h2 id="text1">Something for youu!</h2>
+    <h1 id="text1">!!!</h1>
     <button class="big-button circle-button" onclick="redirectToIndex()">
       <span>Click it :)</span>
     </button>
