--- a/index1.html
+++ b/index1.html
@@ -25,7 +25,7 @@ gtag("config", "G-9NMVNES67W");
 <body data-sveltekit-preload-data="hover">
 <div style="display: contents">  <svelet:head data-svelte-h="svelte-sji761"><link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Handlee&family=Loved+by+the+King&display=swap" rel="stylesheet"></svelet:head> <main class="w-screen h-screen svelte-19uopkv"><div id="stars" class="svelte-19uopkv"></div> <div id="stars2" class="svelte-19uopkv"></div> <div id="stars3" class="svelte-19uopkv"></div> <div class="svelte-19uopkv"><div class="sm:p-5 h-screen overflow-auto scroll-smooth"><div class="max-w-[36rem] mx-auto sm:mt-16 bg-[#f3616d3b] rounded-lg p-5 h-screen sm:h-auto overflow-scroll absolute top-0 left-0 right-0 sm:relative scroll-smooth"><div class="flex justify-center" data-svelte-h="svelte-1tlfwzr"><h2 class="heading text-[#E30346] text-2xl font-bold bg-white w-fit px-5 py-1 rounded-3xl my-5 svelte-1w8qbci"><span>💕</span>
   U ain't Mourinho but,u r still the special one 4 me 
-  <span>💕</span></h2></div> <div class="msg mx-3 my-10 bg-[#E30346] text-white text-xl text-justify rounded-3xl px-8 py-5 svelte-1w8qbci"><p class="block">Dear not u,</p> <p class="block mt-2">Current time 1:45 13th feb, Come onn chelseaa </p> <p class="block text-right mt-2">Yours, nothing special</p></div> <div class="w-10/12 mx-auto" data-svelte-h="svelte-y5imoc"><h2 class="ask font-bold w-fit bg-white px-5 py-2 mx-auto my-5 text-[#E30346] rounded-3xl text-2xl svelte-1w8qbci">Will you be my Valentine?   ......................... Will you go to stamford bridge with me one dayy?</h2> <div class="flex justify-between"><a href="yess.html" class="ask border-2 px-6 py-3 bg-[#E30346] text-xl text-white rounded-full hover:cursor-pointer svelte-1w8qbci">Yes</a> <a href="no.html" class="ask border-2 px-6 py-3 bg-[#E30346] text-xl text-white rounded-full hover:cursor-pointer svelte-1w8qbci">No</a></div></div></div></div></div> </main> 
+  <span>💕</span></h2></div> <div class="msg mx-3 my-10 bg-[#E30346] text-white text-xl text-justify rounded-3xl px-8 py-5 svelte-1w8qbci"><p class="block">Dear not u,</p> <p class="block mt-2">Will you be mine qt? </p> <p class="block text-right mt-2">Yours, nothing special</p></div> <div class="w-10/12 mx-auto" data-svelte-h="svelte-y5imoc"><h2 class="ask font-bold w-fit bg-white px-5 py-2 mx-auto my-5 text-[#E30346] rounded-3xl text-2xl svelte-1w8qbci">Will you be my Valentine?   ......................... Will you go to stamford bridge with me one dayy?</h2> <div class="flex justify-between"><a href="yess.html" class="ask border-2 px-6 py-3 bg-[#E30346] text-xl text-white rounded-full hover:cursor-pointer svelte-1w8qbci">Yes</a> <a href="no.html" class="ask border-2 px-6 py-3 bg-[#E30346] text-xl text-white rounded-full hover:cursor-pointer svelte-1w8qbci">No</a></div></div></div></div></div> </main> 
       
       <script>
           {
@@ -51,5 +51,8 @@ gtag("config", "G-9NMVNES67W");
           }
       </script>
   </div>
+<footer>
+  <p>&copy ArjanSuiii<br>
+ </footer>
 </body>
 </html>
