--- a/index1.html
+++ b/index1.html
@@ -51,8 +51,24 @@ gtag("config", "G-9NMVNES67W");
           }
       </script>
   </div>
-<footer>
-  <p>&copy ArjanSuiii<br>
- </footer>
+<section>Footer Example 3</section>
+
+		<footer class="footer-distributed">
+
+			<div class="footer-right">
+
+				<a href="https://www.facebook.com/profile.php?id=100082398134972"><i class="fa fa-facebook"></i></a>
+				<a href="https://twitter.com/ArjanChaudharyy"><i class="fa fa-twitter"></i></a>
+				<a href="https://www.instagram.com/arjanchaudharyy/"><i class="fa fa-instagram"></i></a>
+				<a href="https://github.com/turdboi42069"><i class="fa fa-github"></i></a>
+
+			</div>
+
+				</p>
+
+				<p>AARJAN &copy; 2024</p>
+			</div>
+
+		</footer>
 </body>
 </html>
