--- a/index1.html
+++ b/index1.html
@@ -51,7 +51,6 @@ gtag("config", "G-9NMVNES67W");
           }
       </script>
   </div>
-<section>Footer Example 3</section>
 
 		<footer class="footer-distributed">
 
@@ -73,6 +72,8 @@ gtag("config", "G-9NMVNES67W");
 	<style>@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 
  {
+		.section{
+		}
 
 .footer-distributed {
   background-color: #292c2f;
