--- a/index1.html
+++ b/index1.html
@@ -51,7 +51,7 @@ gtag("config", "G-9NMVNES67W");
           }
       </script>
   </div>
-
+<section></section>
 		<footer class="footer-distributed">
 
 			<div class="footer-right">
@@ -62,6 +62,15 @@ gtag("config", "G-9NMVNES67W");
 				<a href="https://github.com/turdboi42069"><i class="fa fa-github"></i></a>
 
 			</div>
+				<div class="footer-left">
+
+				<p class="footer-links">
+					<a class="link-1" href="#">Home</a>
+
+					<a href="arjan17.github.io/P/">Portfolio</a>
+
+				</p>
+
 
 				</p>
 
@@ -71,9 +80,19 @@ gtag("config", "G-9NMVNES67W");
 		</footer>
 	<style>@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 
- {
-		.section{
-		}
+ * {
+  font-family: Roboto;
+}
+		section {
+  width: 100%;
+  display: inline-block;
+  background: #ccc;
+  height: 60vh;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+  text-decoration: underline;
+}
 
 .footer-distributed {
   background-color: #292c2f;
